--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -23,9 +23,14 @@
 
 	<dependencies>
 		<dependency>
+			<artifactId>drakkar-model</artifactId>
+			<groupId>com.example</groupId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-		
+
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
