--- a/proyecto/pom.xml
+++ b/proyecto/pom.xml
@@ -21,6 +21,11 @@
 
 	<dependencies>
 		<dependency>
+			<artifactId>drakkar-model</artifactId>
+			<groupId>com.example</groupId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
